--- a/src/global.css
+++ b/src/global.css
@@ -1,5 +1,12 @@
 @import "tailwindcss";
 
 @theme {
-	--font-sans: Inter, sans-serif;
+	--font-sans: 'Montserrat', sans-serif;
+	--font-work-sans: 'Work Sans', sans-serif;
+}
+
+@layer utilities {
+	.border-default {
+		border-color: #e1e3ea;
+	}
 }
