--- a/src/global.css
+++ b/src/global.css
@@ -1,8 +1,8 @@
 @import "tailwindcss";
 
 @theme {
-	--font-sans: 'Montserrat', sans-serif;
-	--font-work-sans: 'Work Sans', sans-serif;
+	--font-sans: "Montserrat", sans-serif;
+	--font-work-sans: "Work Sans", sans-serif;
 }
 
 @layer utilities {
