style(global): add filter-orange class
Introduced a `.filter-orange` CSS class with specific filter properties for invert, sepia, saturation, hue-rotation, brightness, and contrast. Enhances visual styling options. No functional changes.

--- a/src/global.css
+++ b/src/global.css
@@ -10,3 +10,8 @@
 		border-color: #e1e3ea;
 	}
 }
+
+.filter-orange {
+	filter: invert(55%) sepia(98%) saturate(1268%) hue-rotate(359deg)
+		brightness(101%) contrast(101%);
+}
