--- a/src/global.css
+++ b/src/global.css
@@ -2,6 +2,13 @@
 
 @plugin "tailwindcss-animate";
 
+@layer base {
+	button,
+	[role="button"] {
+		cursor: pointer;
+	}
+}
+
 @theme {
 	--font-sans: "Montserrat", sans-serif;
 	--font-work-sans: "Work Sans", sans-serif;
